--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,6 @@
     <artifactId>test123</artifactId>
     <version>1.0</version>
 
-    <properties>
-        <maven.compiler.source>1.7</maven.compiler.source>
-        <maven.compiler.target>1.7</maven.compiler.target>
-    </properties>
-
     <distributionManagement>
         <repository>
             <id>github</id>
@@ -20,5 +15,19 @@
             <url>https://maven.pkg.github.com/joopererer/test123</url>
         </repository>
     </distributionManagement>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
