--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubutnu-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
