--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>test123</artifactId>
-    <version>6.0</version>
+    <artifactId>test-maven</artifactId>
+    <version>1.0</version>
 
     <distributionManagement>
         <repository>
             <id>github</id>
             <name>GitHub OWNER Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/joopererer/test123</url>
+            <url>https://maven.pkg.github.com/joopererer/test-maven</url>
         </repository>
     </distributionManagement>
 
