Mise à jour README

--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,17 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <!-- info de package -->
     <groupId>org.example</groupId>
     <artifactId>test-maven</artifactId>
-    <version>1.1</version>
+    <version>0.1</version>
 
+    <!-- indiquer encoding UTF-8 -->
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <!-- dépôt pour le package -->
     <distributionManagement>
         <repository>
             <id>github</id>
@@ -27,6 +34,7 @@
 
     <build>
         <plugins>
+            <!-- compilateur -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -36,6 +44,7 @@
                     <target>17</target>
                 </configuration>
             </plugin>
+            <!-- pour générer un rapport de couverture du code -->
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
